# PODStudio

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  GIT_PUSH_INSTRUCTIONS.md  LICENSE  README.md  SECURITY.md  STEP_0_COMPLETE.md  STEP_1_COMPLETE.md  STEP_2_COMPLETE.md  commit_msg.txt  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/backend/: __init__.py  server.py
app/backend/models/: __init__.py  entities.py  schemas.py
app/backend/routes/: __init__.py  health.py  jobs.py  llm.py  probe.py  prompts.py
app/backend/services/: __init__.py
app/cli/: __init__.py  manage.py
app/core/: __init__.py  agents.py  config.py  db.py  filetypes.py  llm_client.py  llm_registry.yaml  llm_servers.yaml  logging.py  models_mock.py  packer.py  policy.py  probe.py  prompts.py  thumbnails.py  utils.py  watcher.py
app/ui/: __init__.py  app.py  main_window.py
app/ui/assets/: README.md
app/ui/helpers/: __init__.py  backend_status.py
app/ui/themes/: style.md  tokens.json
app/ui/widgets/: __init__.py  asset_grid.py  dock_left.py  dock_right.py  selection_tray.py  top_bar.py
app/workers/: __init__.py  queue.py
app/workers/jobs/: __init__.py  bg_remove.py  thumbnails.py  transcode.py  upscale.py
docs/: README.md  architecture.md  data_models.md  export_contract.md  hardware_policy.md  processing_pipelines.md  product_brief.md  risk_register.md  test_plan.md  ux_spec.md
docs/architecture/: components.md  data_model.md  hardware_policy.md  overview.md
docs/ops/: external_tools.md  install_windows.md  run_llama_servers.md  troubleshooting.md
docs/product/: north_star.md  roadmap.md  vision.md
docs/prompt_templates/: audio_elevenlabs.txt  audio_suno.txt  image_midjourney.txt  image_sdxl.txt  video_kling.txt  video_sora.txt
docs/specs/: manifest_schema.md  pack_format_spec.md  prompt_templates_spec.md  ui_spec.md
models/: DOWNLOAD_INSTRUCTIONS.md
tests/: README.md  test_curation_ops.py
tests/integration/: test_backend_health.py  test_bg_remove_job.py  test_db_create.py  test_llm_health.py  test_pack_prompts_embed.py  test_prompt_agents_optout.py  test_watcher_stub.py  test_waveform_poster_jobs.py
tests/unit/: test_llm_policy.py  test_llm_registry.py  test_probe_schema.py  test_prompt_modes.py  test_ui_imports.py
tools/: README.md
